# liver_cut_

./: CMakeLists.txt  ReadMe.md
data/: 1.stl  2.stl  3.stl  4a.stl  4b.stl  5.stl  6.stl  7.stl  8.stl  fitted_surface.stl  left_inside_v.stl  left_od_v.stl  left_ou_v.stl  rb1b.stl  rb1v.stl  rb2v.stl  rb3b.stl  rb3v.stl  rf_down_v.stl  rf_up_v.stl  tail_v.stl  主干.stl  尾状叶段.stl  左外叶上段.stl  病灶1.stl  肝总管.stl  胆囊.stl  胰腺.stl
src/: keypointfinder.cpp
